fixing footer link on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -512,6 +512,10 @@ span.gitter{
     float: none !important;
     padding-left: 0;
   }
+  nav.navbar .container.fluid-container ul.ul-h.nav-menu.nav-menu-right>li{
+    display: block !important;
+    margin-top: 10px;
+  }
   nav.navbar .container.fluid-container ul.ul-h.nav-menu.nav-menu-left{
     padding-top: 30px;
     text-align: center;
@@ -527,6 +531,9 @@ span.gitter{
   .navbar{
     min-height: 85px;
     margin-bottom: 0 !important;
+  }
+  .hero-fullscreen{
+    height: 75vh !important;
   }
   nav.navbar ul.ul-h.nav-menu>li{
     padding: 0 22px !important;
@@ -545,6 +552,10 @@ span.gitter{
     float: none !important;
     padding-left: 0;
   }
+  nav.navbar .container.fluid-container ul.ul-h.nav-menu.nav-menu-right>li{
+    display: block !important;
+    margin-top: 10px;
+  }
   nav.navbar .container.fluid-container ul.ul-h.nav-menu.nav-menu-left{
     padding-top: 30px;
     text-align: center;
@@ -553,7 +564,7 @@ span.gitter{
     float: none !important;
   }
   .hero-fullscreen{
-    height: 85vh !important;
+    height: 65vh !important;
   }
   .nav-menu-center{
     padding-top: 15px !important;
@@ -580,6 +591,10 @@ span.gitter{
     margin:0px auto;
     float: none !important;
   }
+  nav.navbar .container.fluid-container ul.ul-h.nav-menu.nav-menu-right>li{
+    display: block !important;
+    margin-top: 10px;
+  }
   nav.navbar .container.fluid-container ul.ul-h.nav-menu.nav-menu-left{
     padding-top: 30px;
     text-align: center;
@@ -588,7 +603,7 @@ span.gitter{
     float: none !important;
   }
   .hero-fullscreen{
-    height: 80vh !important;
+    height: 56vh !important;
   }
   nav.navbar ul.ul-h.nav-menu>li{
     padding: 0 15px !important;
